# Bandot

./: .dockerignore  Operation_Manual.md  Operation_Manuel.md  README.md  my.sh
bandot-node/: Cargo.toml  Dockerfile  README.md
bandot-node/runtime/: Cargo.toml  build.rs
bandot-node/runtime/src/: bancor.rs  bdt.rs  cdp.rs  lib.rs  pdot.rs  pool.rs  traits.rs
bandot-node/src/: chain_spec.rs  cli.rs  main.rs  service.rs
bandot-ui/: Dockerfile  README.md  tsconfig.json
docker/: Dockerfile  build-node.sh  build-ui.sh  build.sh  docker-compose-local.yml  docker-compose-ui.yml  docker-compose.yml
runtime/src/: bancor.rs  bdt.rs  cdp.rs  lib.rs  pdot.rs  pool.rs  token.bak.rs  token.rs  token_pool.rs  traits.rs
src/: chain_spec.rs
