[package]
name = "bandot2"
version = "2.0.0"
authors = ["wuminzhe"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "bandot2"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
substrate-cli = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
substrate-executor = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
substrate-service = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
inherents = { package = "substrate-inherents", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
transaction-pool = { package = "substrate-transaction-pool", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
network = { package = "substrate-network", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
aura = { package = "substrate-consensus-aura", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
grandpa = { package = "substrate-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
substrate-client = {  git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
basic-authorship = { package = "substrate-basic-authorship", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
runtime = { package = "bandot2-runtime", path = "runtime" }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e' }
