[package]
name = "bandot"
version = "0.3.0"
authors = ["Bandot Developers"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "bandot"
path = "src/main.rs"

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

sp-io = { git = "https://github.com/paritytech/substrate.git" }
sc-cli = { git = "https://github.com/paritytech/substrate.git" }
sp-core = { git = "https://github.com/paritytech/substrate.git" }
sc-executor = { git = "https://github.com/paritytech/substrate.git" }
sc-service = { git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git" }
sc-network = { git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git" }
sc-client = { git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git" }
sc-basic-authority = { git = "https://github.com/paritytech/substrate.git"}
sc-telemetry = { git = "https://github.com/paritytech/substrate.git" }
sc-rpc = { git = "https://github.com/paritytech/substrate" }

frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }

runtime = { package = "bandot-runtime", path = "runtime" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", git = 'https://github.com/paritytech/substrate.git' }