[package]
name = "bandot2-runtime"
version = "2.0.0"
authors = ["wuminzhe"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
runtime-io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
version = { package = "sr-version", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
support = { package = "srml-support", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
substrate-session = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default-features = false }
balances = { package = "srml-balances", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
aura = { package = "srml-aura", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
grandpa = { package = "srml-grandpa", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
executive = { package = "srml-executive", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
indices = { package = "srml-indices", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
randomness-collective-flip = { package = "srml-randomness-collective-flip", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
sudo = { package = "srml-sudo", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
transaction-payment = { package = "srml-transaction-payment", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
sr-api = { git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default-features = false }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default-features = false }
tx-pool-api = { package = "substrate-transaction-pool-runtime-api", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default-features = false }
inherents = { package = "substrate-inherents", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default-features = false }
arithmetic = { package = "sr-arithmetic", git = 'https://github.com/paritytech/substrate.git', rev='6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e', default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sr-api/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"aura/std",
	"aura-primitives/std",
	"grandpa/std",
	"executive/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"transaction-payment/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"inherents/std",
	"arithmetic/std",
]
